--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -18,19 +18,23 @@ jobs:
       - name: Install Trivy
         run: |
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh
-          sudo mv ./trivy /usr/local/bin
+          sudo mv ./bin/trivy /usr/local/bin
 
-      # Step 3: Verify Trivy Installation
+      # Step 3: Debug Installation
+      - name: Debug Installation
+        run: ls -R ./
+
+      # Step 4: Verify Trivy Installation
       - name: Verify Trivy Installation
         run: trivy --version
 
-      # Step 4: Run Trivy to scan the repository
+      # Step 5: Run Trivy Scan
       - name: Run Trivy Scan
         run: |
           mkdir -p scan-reports
           trivy fs --scanners vuln,config,secret --format json --output scan-reports/trivy-scan.json .
 
-      # Step 5: Upload the Trivy scan report
+      # Step 6: Upload the Trivy Scan Report
       - name: Upload Trivy Scan Report
         uses: actions/upload-artifact@v3
         with:
