--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Run Trivy Scan
         run: |
           mkdir -p scan-reports
-          trivy fs --scanners vuln,config,secret --format table --output scan-reports/trivy-scan.txt .
+          trivy fs --scanners vuln,config,secret --format table . > scan-reports/trivy-scan.txt
 
       # Step 5: Upload the Trivy Scan Report
       - name: Upload Trivy Scan Report
